--- a/fullstack Đối Tác QLBH/Backend API QLBH/.env
+++ b/fullstack Đối Tác QLBH/Backend API QLBH/.env
@@ -4,8 +4,8 @@ PORT = 8080
 HOST = localhost
 HOST_URL = http://localhost:8080
 #sql server congfig
-SQL_USER = vuong
-SQL_PASSWORD = vuong
+SQL_USER = MiPu
+SQL_PASSWORD = 123456
 SQL_DATABASE = QLBH
 SQL_SERVER = 127.0.0.1
 SQL_ENCRYPT = false
