--- a/fullstack Đối Tác QLBH/Backend API QLBH/.env
+++ b/fullstack Đối Tác QLBH/Backend API QLBH/.env
@@ -4,8 +4,8 @@ PORT = 8080
 HOST = localhost
 HOST_URL = http://localhost:8080
 #sql server congfig
-SQL_USER = pmp
-SQL_PASSWORD = pmp
-SQL_DATABASE = QLBH
+SQL_USER = MiPu
+SQL_PASSWORD = 123456
+SQL_DATABASE = QLBH_1
 SQL_SERVER = 127.0.0.1
 SQL_ENCRYPT = false
